use default memory settings for scalaCompile to check if this is a resonable default
+REVIEW-5246